# raft-in-rust

./: .gitignore  Cargo.toml  test.py
src/: lib.rs  message.rs  node.rs  persistent.rs  rpc.rs  statemachine.rs  types.rs
src/examples/tcp_mvp/: connections.rs  entry.rs  main.rs  msgparse.rs  serialize.rs  statemachines.rs  storage.rs
src/samplelib/: mod.rs
tests/: node_type.rs  replication.rs  roles.rs
tests/simulation/: mod.rs
tests/test_utils/: helpers.rs  mod.rs  simulation.rs
