[package]
name = "rafted"
version = "0.1.0"
authors = ["Edward Lee <edwardlee.259@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.68"

[dev-dependencies]
net2 = "0.2.33"
rand_core = "0.5.1"
rand_chacha = "0.2.2"

[[example]]
name = "tcp_mvp"
path = "src/examples/tcp_mvp/main.rs"